--- a/pom.xml
+++ b/pom.xml
@@ -2,17 +2,17 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>Main</groupId>
   <artifactId>myapp</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>war</packaging>
+  <version>0.0.2-SNAPSHOT</version>
+  <packaging>jar</packaging>
   <build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>3.2.0</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.11</source>
+					<target>1.11</target>
 				</configuration>
 			</plugin>
 		</plugins>
